connect extension to backend

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <head></head>
     <body>
         <div id="header"><h1>News Friend</h1></div>
         <div><p>tada news friend</p></div>
-        <div class="news-button" id="button-wrapper">
+        <div id="button-wrapper">
             <button class="button" id="news-button">Find more sources</button>
         </div>
     </body>
