--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    </head>
     <body>
         <div id="header"><h1>News Friend</h1></div>
         <div><p>tada news friend</p></div>
         <div id="button-wrapper">
             <button class="button" id="news-button">Find more sources</button>
         </div>
+        <div id="article-list">blah</div>
     </body>
     
     <script src="scripts/popup.js"></script>
