--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+        <link href="resources/bootstrap.min.css" rel="stylesheet">
+        <link href="popup.css" rel="stylesheet">
     </head>
     <body>
+        <div class="container" id="container">
         <div id="header"><h1>News Friend</h1></div>
-        <div><p>tada news friend</p></div>
         <div id="button-wrapper">
-            <button class="button" id="news-button">Find more sources</button>
+            <button type="button" class="btn btn-primary" id="news-button">Find more sources</button>
         </div>
         <div id="article-list">blah</div>
+        </div>>
+        <script src="resources/bootstrap.bundle.min.js"></script>
     </body>
     
     <script src="scripts/popup.js"></script>
