--- a/extension/popup.html
+++ b/extension/popup.html
@@ -10,8 +10,8 @@
         <div id="button-wrapper">
             <button type="button" class="btn btn-primary" id="news-button">Find more sources</button>
         </div>
-        <div id="article-list">blah</div>
-        </div>>
+        <div id="article-list"></div>
+        </div>
         <script src="resources/bootstrap.bundle.min.js"></script>
     </body>
     
