get text from site

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -8,7 +8,8 @@
         <div class="container" id="container">
         <div id="header"><h1>News Friend</h1></div>
         <div id="button-wrapper">
-            <button type="button" class="btn btn-primary" id="news-button">Find more sources</button>
+            <button type="button" class="btn btn-primary" id="summary-button">Get a summary</button>
+            <button type="button" class="btn btn-primary" id="article-button">Find more sources</button>
         </div>
         <div id="article-list"></div>
         </div>
